--- a/uiproject/index.html
+++ b/uiproject/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>UI-Project</title>
   <script src="https://kit.fontawesome.com/1d0fce634e.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="stylesheet.css">
 </head>
@@ -196,7 +196,7 @@
       </div>
 
     </div>
-    <div style="text-align: center;padding: 10px; margin:10px;">Copyrights <i class="far fa-copyright"></i> All rights reserved | This tempelate is made with <i class="far fa-heart"></i>
+    <div class="Copyrights">Copyrights <i class="far fa-copyright"></i> All rights reserved | This tempelate is made with <i class="far fa-heart"></i>
 
       by Colorlib </div>
   </div>
