--- a/uiproject/index.html
+++ b/uiproject/index.html
@@ -147,7 +147,7 @@
      <br/>
 
       <div class="portfolio">
-          <img id="ii1" src="hero-img.png" > </img>
+          <img src="hero-img.png" height="450px" width="515px"> </img>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Reprehenderit esse cumque
             facilis nihil quae asperiores eligendi laudantium illo odit enim.
             Molestiae deserunt fugiat esse ipsa quia qui aut iusto impedit.</p>
