--- a/uiproject/index.html
+++ b/uiproject/index.html
@@ -72,7 +72,7 @@
     </header>
 
     <div class ="service-container">Serivces</div>
-      <div>
+      <div class ="ourservices">
 
         <div class="services">
           <div class="test">
